Consider caption bar if window is maximized with a11y node bounds

- When window is maximized, Android content is rendered without
  considering caption bar. We need to adjust accessibility node bounds
  to consider it.

      window in maximized state. Confirm that accessibility focus rect
      is shown in the right place.

Bug: 850427
Test: Enable chrome caption bar and spoken feedback. Open any Android
Change-Id: I82a6020135623d73f0f5905ef49ce44328470108
Reviewed-on: https://chromium-review.googlesource.com/1090598
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566681}
Former-commit-id: eba62fae6277643d82f444813c3e6e73c51d6b83